fix container width and button focus shift

--- a/components/CastCard/CastCard.module.css
+++ b/components/CastCard/CastCard.module.css
@@ -4,7 +4,6 @@
   user-select: none;
   align-items: center;
   margin-bottom: 16px;
-  max-width: calc(100% - 106px);
 }
 
 .card {
